tests/tests/ui-unstable/non-string.stderr
error: proc macro panicked
  --> $DIR/non-string.rs:13:5
   |
13 |     indoc!(64);
   |     ^^^^^^^^^^^
   |
   = help: message: argument must be a single string literal

error: aborting due to previous error

